--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2080,7 +2080,10 @@ input, select, textarea {
 			height: 35em;
 		}
 
-/* Logo */
+/* 
+
+
+*/
 
 	#logo {
 		width: 100%;
@@ -2091,7 +2094,7 @@ input, select, textarea {
 
 		#logo h1 {
 			font-weight: 900;
-			text-transform: uppercase;
+			text-transform: initial;
 			color: #fff;
 			font-size: 2em;
 			letter-spacing: 0.25em;
@@ -2100,7 +2103,7 @@ input, select, textarea {
 		#logo p {
 			color: #eee;
 			color: rgba(255, 255, 255, 0.5);
-			text-transform: uppercase;
+			text-transform: initial;
 			margin: 1.25em 0 0 0;
 			display: block;
 			letter-spacing: 0.2em;
