--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1637,7 +1637,7 @@ input, select, textarea {
 		text-align: center;
 		text-transform: uppercase;
 		font-weight: 700;
-		letter-spacing: 0.25em;
+		letter-spacing: 0.05em;
 		text-decoration: none;
 		border-radius: 0.35em;
 		border: 0;
@@ -1963,11 +1963,11 @@ input, select, textarea {
 			top: 0;
 			left: 50%;
 			text-align: center;
-			text-transform: uppercase;
+			text-transform: inherit;
 			display: block;
 			font-weight: 700;
-			letter-spacing: 0.25em;
-			font-size: 0.9em;
+			letter-spacing: 0.05em;
+			font-size: 1.2em;
 			width: 25em;
 			height: 3.25em;
 			top: -3.25em;
@@ -2225,12 +2225,12 @@ input, select, textarea {
 
 	#intro {
 		padding-bottom: 8em;
-		text-align: center;
+		text-align: left;
 	}
 
 		#intro p.style1 {
 			font-size: 1.5em;
-			letter-spacing: 0.075em;
+			letter-spacing: 0.0075em;
 		}
 
 		#intro p.style2 {
@@ -2238,9 +2238,9 @@ input, select, textarea {
 			color: #fff;
 			border-radius: 0.35em;
 			box-shadow: inset 0px 0px 1px 1px rgba(255, 255, 255, 0.25);
-			font-size: 2.75em;
-			letter-spacing: 0.075em;
-			line-height: 1.35em;
+			font-size: 2.5em;
+			letter-spacing: 0.0075em;
+			line-height: 1.12em;
 			padding: 1em 0 1em 0;
 			margin-bottom: 1em;
 		}
@@ -2251,7 +2251,7 @@ input, select, textarea {
 			}
 
 		#intro p.style3 {
-			font-size: 1.1em;
+			font-size: 1.3em;
 			width: 48em;
 			margin: 0 auto;
 		}
