--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2017,7 +2017,7 @@ input, select, textarea {
 			}
 
 		.wrapper.style2 {
-			background: url("../../images/Heart_of_the_Phantom_Galaxy.jpg") center center;
+			background: url("../../images/STScI-01G7DA7WM13DBQNKV4EHRFCCJ7.png") center center;
 			background-size: cover;
 			padding: 0;
 		}
