--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2017,9 +2017,7 @@ input, select, textarea {
 			}
 
 		.wrapper.style2 {
-			background: url("../../images/STScI-01G7DA7WM13DBQNKV4EHRFCCJ7.png") center center;
-			background-size: cover;
-			padding: 0;
+			background: #fff;
 		}
 
 			.wrapper.style2 .title {
