--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2061,7 +2061,7 @@ input, select, textarea {
 		justify-content: center;
 		position: relative;
 		height: 24em;
-		background: url("../../images/pic4.jpg") center center;
+		background: url("../../images/COVER_PAS_WEB.png") center center;
 		background-size: cover;
 		padding: 0;
 	}
